--- a/package.json
+++ b/package.json
@@ -26,16 +26,18 @@
 		"@typescript-eslint/parser": "^7.0.0",
 		"@vitest/coverage-v8": "^1.2.0",
 		"@vitest/ui": "^1.2.0",
+		"autoprefixer": "^10.4.23",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.0",
 		"jsdom": "^24.0.0",
 		"msw": "^2.2.0",
+		"postcss": "^8.5.6",
 		"prettier": "^3.2.0",
 		"prettier-plugin-svelte": "^3.1.0",
 		"svelte": "^4.2.0",
 		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.0",
+		"tailwindcss": "^3.4.19",
 		"tslib": "^2.6.0",
 		"typescript": "^5.3.0",
 		"vite": "^5.1.0",
